2018-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Taper_Scan.pl,
	  installcheck/DB_Catalolog2/amdump.catalog.1,
	  installcheck/Installcheck/DBCatalog2.pm,
	  installcheck/amdump.pl,
	  server-src/amserverconfig.pl: Fix for different config and timezone

2018-01-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda.conf.5.xml: Add rest-api-port

2018-01-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/MySQL.pm: Do the 'use DBD::mysql' in eval so
	  it is not added in the package dependencies

2018-01-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Add a --[no]taped argument

2018-01-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/DBCatalog2.pm,
	  installcheck/Amanda_Taper_Scan.pl: Use random file name

2018-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm (clean): Delete parts with no volume

2018-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): fix for max_dle_by_volume

2018-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/ambackup.pl: Fix usage message

2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Amflush.pm (get_flush): Only return flush for the
	  storages
	* perl/Amanda/DB/Catalog2/SQL.pm (_add_flush_cmd): Add a part
	* server-src/amflush.pl: Pass the storage list got get_flush

2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQLite.pm: Retry on /database is locked/

2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm, server-src/amstatus.pl: Fix when taper crash

2018-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): fix for max_dle_by_volume

2018-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>