@@ -1,3 +1,7 @@
+2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/match.c (match_labelstr_template, match_labelstr):
+	  Checklabel is not NULL
+
 2018-01-17  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/Amanda_Taper_Scan.pl,
 	  installcheck/DB_Catalolog2/amdump.catalog.1,
